<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="edit_text_email">Enter your email</string>
    <string name="email_text">email</string>
    <string name="password_text">password</string>
    <string name="hint_name">Username</string>
    <string name="email_address">Email address</string>
    <string name="hint_password">Password</string>
    <string name="cell_type_text">Choose your default cell type below, you can always change it later!</string>
    <string name="score_text">Score: </string>
    <string name="login_error_message">Please make sure you enter an email and password</string>
    <string name="login_error_title">Error</string>
    <string name="signup_error_message">Please make sure you enter an email and password</string>
    <string name="signup_error_title">Error!</string>
    <string name="userName_error_message">Please enter a username</string>
    <string name="leaderboard">Leaderboard:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_cellType">Cell Type</string>
    <string name="summary_cellType">Choose what cell you want to be</string>
    <string name="application_settings">Settings</string>
    <string name="title_website">Website</string>
    <string name="summary_website">Visit our website</string>
    <string name="time">"Time: "</string>
    <string name="pie_label">Game Performance</string>
    <string name="register_instructions">Enter your username, email and password, your username will be visible to other players</string>
</resources>
