<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.preference.PreferenceCategory
        android:title="@string/application_settings">

        <!--Preference for cell type-->
        <ListPreference
            android:key="cellType"
            android:title="@string/title_cellType"
            android:summary="@string/summary_cellType"
            android:entries="@array/cell_types"
            android:entryValues="@array/cell_types_val"
            android:dialogTitle="@string/title_cellType"/>
        <!--TODO: Check if need entry values for the list preference-->
        <!--personal website title-->
        <androidx.preference.PreferenceScreen
            android:title="@string/title_website"
            android:summary="@string/summary_website">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://krkim565.github.io/coronaio/" />
        </androidx.preference.PreferenceScreen>

    </androidx.preference.PreferenceCategory>

    <!--Sign-out button, referenced https://stackoverflow.com/questions/7275015/android-start-activity-from-preferences-xml-->
    <androidx.preference.PreferenceCategory
        android:title="Sign out">

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>