<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ls="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image1background">

<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <TextView
        android:id="@+id/registration_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/register_instructions"
        style="@style/InfoOverlayText"
        android:backgroundTint="@android:color/white"
        />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/hint_name" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:hint="@string/email_address"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:backgroundTint="@android:color/white"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:hint="@string/hint_password"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:backgroundTint="@android:color/white"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/cell_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="15dp"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/cell_type_text"
        style="@style/InfoOverlayText"
        android:backgroundTint="@android:color/white"
         />

    <Spinner
            android:id="@+id/cell_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownSelector="@android:color/white"
            style="@style/InfoOverlayText"
            android:textSize="24dp"
            android:backgroundTint="@android:color/white"
            android:layout_margin="10dp"
    />
    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginVertical="10dp"
        android:layout_margin="35dp"
        android:background="@drawable/create_account"
        />
    </LinearLayout>



</ScrollView>
